--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,9 @@
-def artifactname = "rome-rp1-app.jar"
-def repoName = "rome-rp1-app-repo"
-def pipelineName = "balu_scripted_pipeline"
+def artifactname = "artifact_devops_${env.BUILD_NUMBER}.jar"
+def repoName = "repository_devops"
+def pipelineName = "pipeline_devops"
 def semanticVersion = "${env.BUILD_NUMBER}.0.0"
-def packageName = "rome-rp1-package_${env.BUILD_NUMBER}"
+def packageName = "package_devops_${env.BUILD_NUMBER}"
 def version = "${env.BUILD_NUMBER}.0"
-def pkgName = "rome-rp1-package"
 
 pipeline {
   agent any
@@ -34,10 +33,9 @@ pipeline {
        stage('Pre-Prod') {
 		steps {
                     sonarSummaries()
-                    snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"master"}""")
-           	    snDevOpsPackage(name: "${pkgName}-${env.BUILD_NUMBER}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}", "repositoryName": "${repoName}"}], "branchName":"master"}""")
-                    
-                 }       
+                    snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"main"}""")
+                    snDevOpsPackage(name: "${packageName}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}], "branchName":"main"}""")
+            }       
        }
       stage('Deploy') {
                  steps {
