--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -121,7 +121,7 @@ jobs:
           context-github: ${{ toJSON(github) }}
           job-name: 'Test'
           # xml-report-filename: target/surefire-reports/testng-results.xml
-          xml-report-filename: target/surefire-reports/testng-junit-results/testng-results.xml
+          xml-report-filename: target/surefire-reports/*.xml
           
   integrationTest:
     needs: test
