--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.test</groupId>
-	<artifactId>First_repo</artifactId>
+	<artifactId>Sonar-test-project</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -36,9 +36,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
 		<dependency>
-		    <groupId>org.sonarsource.scanner.maven</groupId>
-		    <artifactId>sonar-maven-plugin</artifactId>
-		    <version>3.9.0.2155</version>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.9.0.2155</version>
 		</dependency>
 
 	</dependencies>
@@ -54,32 +54,36 @@
 		<jersey.version>2.27</jersey.version>
 		<java.version>11</java.version>
 
-	    <!-- JaCoCo Properties -->
-	    <jacoco.version>0.8.6</jacoco.version>
-	    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-	    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-	    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-	    <sonar.language>java</sonar.language>
-		
-		<sonar.projectKey>balu-sn-devops_First_repo</sonar.projectKey>
+		<!-- JaCoCo Properties -->
+		<jacoco.version>0.8.6</jacoco.version>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.language>java</sonar.language>
+
+		<sonar.projectKey>sonar-test-project</sonar.projectKey>
+		<!-- <sonar.organization>balu-sn-devops</sonar.organization> -->
+		<sonar.host.url>http://sonarqube1.sndevops.xyz</sonar.host.url>
+
+		<!-- <sonar.projectKey>balu-sn-devops_First_repo</sonar.projectKey>
 		<sonar.organization>balu-sn-devops</sonar.organization>
 		<sonar.host.url>http://sonarqube1.sndevops.xyz</sonar.host.url>
-		
+
 		<sonar.projectKey>balu-sn-devops_First_repo</sonar.projectKey>
 		<sonar.organization>balu-sn-devops</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		
-	  <sonar.projectKey>devops-2022_sonar-scanning-examples</sonar.projectKey>
-	  <sonar.organization>devops-2022</sonar.organization>
-	  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  
-		<sonar.projectKey>devops-2022_sonar-scanner-maven</sonar.projectKey>
+
+		<sonar.projectKey>devops-2022_sonar-scanning-examples</sonar.projectKey>
 		<sonar.organization>devops-2022</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		
+
+		<sonar.projectKey>devops-2022_sonar-scanner-maven</sonar.projectKey>
+		<sonar.organization>devops-2022</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url> -->
+
 	</properties>
 
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.37.0-SNAPSHOT</version>
 
 	<build>
 		<plugins>
@@ -87,23 +91,23 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.6</version>
-			    <executions>
-			        <execution>
-			            <id>jacoco-initialize</id>
-			            <goals>
-			                <goal>prepare-agent</goal>
-			            </goals>
-			        </execution>
-			        <execution>
-			            <id>jacoco-site</id>
-			            <phase>package</phase>
-			            <goals>
-			                <goal>report</goal>
-			            </goals>
-			        </execution>
-    </executions>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-		
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -114,14 +118,14 @@
 				</configuration>
 			</plugin>
 			<plugin>
-			     <groupId>org.sonarsource.scanner.maven</groupId>
-			     <artifactId>sonar-maven-plugin</artifactId>
-			
-			     <configuration>
-			       <goalPrefix>sonar</goalPrefix>
-			     </configuration>
-			
-			 </plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+
+				<configuration>
+					<goalPrefix>sonar</goalPrefix>
+				</configuration>
+
+			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
@@ -135,7 +139,7 @@
 				</configuration>
 
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
