--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,13 @@
 # sonar.ce.javaOpts=-Xmx1536m -Xms128m -XX:+HeapDumpOnOutOfMemoryError
 
 
-sonar.organization=pramaraju96
-sonar.projectKey=pramaraju96_MSNAutomation
-sonar.host.url=https://sonarcloud.io/
+# sonar.organization=pramaraju96
+# sonar.projectKey=pramaraju96_MSNAutomation
+# sonar.host.url=https://sonarcloud.io/
+
+#sonar.organization=pramaraju96
+sonar.projectKey=sonar-test-project
+sonar.host.url=http://sonarqube1.sndevops.xyz/
 
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
