--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # sonar.projectKey=1234abcd
-# sonar.language=java
+sonar.language=java
 # sonar.sources=src
-# sonar.java.binaries=**/*
+sonar.java.binaries=**/*
 # sonar.sourceEncoding=UTF-8
 # sonar.ce.javaOpts=-Xmx1536m -Xms128m -XX:+HeapDumpOnOutOfMemoryError
 
