--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.java.binaries=**/*
 
 #sonar.organization=pramaraju96
 sonar.projectKey=sonar-test-project
-sonar.host.url=http://sonarqube1.sndevops.xyz/
+sonar.host.url=http://sonarqube1.sndevops.xyz
 
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
