--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,11 +40,6 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=pramaraju96_First_repo
   test:
     name: Test
     needs: build
@@ -120,8 +115,8 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Test'
-          # xml-report-filename: target/surefire-reports/testng-results.xml
-          xml-report-filename: target/surefire-reports/*.xml
+          xml-report-filename: target/surefire-reports/testng-results.xml
+          # xml-report-filename: target/surefire-reports/testng-junit-results/testng-results.xml
           
   integrationTest:
     needs: test
