--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,8 +11,10 @@ sonar.java.binaries=**/*
 # sonar.host.url=https://sonarcloud.io/
 
 #sonar.organization=pramaraju96
-sonar.projectKey=sonar-test-project
-sonar.host.url=http://sonarqube1.sndevops.xyz
+#sonar.projectKey=sonar-test-project
+#sonar.host.url=http://sonarqube1.sndevops.xyz
+sonar.projectKey=pramaraju96_First_repo
+sonar.host.url=https://sonarcloud.io
 
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
