--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,10 @@ pipeline {
        
        stage('Pre-Prod') {
 		steps {
-                    sonarSummaries()
+                    //sonarSummaries()
+		    script{
+		       sh '${SCANNER_HOME}/bin/sonar-scanner -Dsonar.projectKey=pramaraju96_First_repo -Dsonar.host.url=https://sonarcloud.io -Dsonar.java.binaries=target/ -Dsonar.branch.name=master'
+		    }
                     snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"main"}""")
                     snDevOpsPackage(name: "${packageName}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}], "branchName":"main"}""")
             }       
@@ -50,10 +53,10 @@ pipeline {
 
 def sonarSummaries() {
 
-   withSonarQubeEnv('Sonar_Cloud') {
+   //withSonarQubeEnv('Sonar_Cloud') {
        //sh '${SCANNER_HOME}/bin/sonar-scanner -Dproject.settings=${SCANNER_HOME}/conf/qa-sonar-scanner-cloud.properties'
-       sh '${SCANNER_HOME}/bin/sonar-scanner -Dsonar.projectKey=pramaraju96_First_repo -Dsonar.host.url=https://sonarcloud.io -Dsonar.java.binaries=target/ -Dsonar.branch.name=master'
-	}
+       
+	//}
 	
     //withSonarQubeEnv('sonarQube_local') {
       // 	sh '${SCANNER_HOME}/bin/sonar-scanner -Dproject.settings=${SCANNER_HOME}/conf/qa-sonar-scanner.properties'
