--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,6 +9,7 @@ pipeline {
   agent any
   tools {
        maven 'Maven'
+       java 'jdk 11'
    }
    environment {
 	 SCANNER_HOME = tool 'sonarScanner'
