--- a/JenkinsFile
+++ b/JenkinsFile
@@ -34,7 +34,7 @@ pipeline {
 		steps {
                     //sonarSummaries()
 		    script{
-		       sh '${SCANNER_HOME}/bin/sonar-scanner -Dsonar.projectKey=pramaraju96_First_repo -Dsonar.host.url=https://sonarcloud.io -Dsonar.java.binaries=target/ -Dsonar.branch.name=master'
+		       sh '${SCANNER_HOME}/bin/sonar-scanner -Dsonar.projectKey=sunilyerubandi_DemoMavenProject -Dsonar.organization=sunilyerubandi -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=8f73ecadbe478e324214c741569315dddfa01ee5 -Dsonar.java.binaries=target/ -Dsonar.branch.name=master'
 		    }
                     snDevOpsArtifact(artifactsPayload: """{"artifacts": [{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}],"branchName":"main"}""")
                     snDevOpsPackage(name: "${packageName}", artifactsPayload: """{"artifacts":[{"name": "${artifactname}", "version": "1.${env.BUILD_NUMBER}","semanticVersion": "1.${env.BUILD_NUMBER}.0","repositoryName": "${repoName}"}], "branchName":"main"}""")
