--- a/.github/workflows/custom-tasks-workflow.yaml
+++ b/.github/workflows/custom-tasks-workflow.yaml
@@ -102,6 +102,28 @@ jobs:
           sonar-host-url: ${{ secrets.SONAR_URL }}
           sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
           sonar-org-key: ${{ secrets.SONAR_ORG_KEY }}
+          
+    - name: ServiceNow DevOps Sonar Scan Results
+      # You may pin to the exact commit or the version.
+      # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
+      uses: ServiceNow/servicenow-devops-sonar@v1.34.2
+      with:
+        # ServiceNow Instance URL
+        instance-url: 
+        # Devops Integration User Name
+        devops-integration-user-name: 
+        # Devops Integration User Password
+        devops-integration-user-password: 
+        # Orchestration Tool Id
+        tool-id: 
+        # Github Context
+        context-github: 
+        # Display Name of the Job
+        job-name: 
+        # Sonar Host URL
+        sonar-host-url: 
+        # Sonar Project Key
+        sonar-project-key: 
 
       - name: Run JUnit Tests
         run: mvn test -Dmaven.test.failure.ignore=true surefire-report:report
