--- a/.github/workflows/custom-tasks-workflow.yaml
+++ b/.github/workflows/custom-tasks-workflow.yaml
@@ -259,9 +259,9 @@ jobs:
                   # Github Context
                   context-github: ${{ toJSON(github) }}
                   # The max. time in seconds to wait until the action should fail.
-                  timeout: # optional, default is 3600
+                  timeout: 3600 # optional, default is 3600
                   # The time in seconds to wait between trying the API.
-                  interval: # optional, default is 100
+                  interval: 100 # optional, default is 100
                   # The customized inputs to create change with the requested details.
                   change-request: '{
                       "setCloseCode": "true",
