--- a/.github/workflows/custom-tasks-workflow.yaml
+++ b/.github/workflows/custom-tasks-workflow.yaml
@@ -14,15 +14,20 @@ name: GitHub Actions Workflow with SNOW custom tasks
 #   pull_request:
 #     types: [opened, synchronize, reopened]
 
-on: workflow_dispatch  
+on: #workflow_dispatch
+  pull_request_target:
+    types:
+      - closed
 
 jobs:
 
     build:
+        # Running your workflow when a pull request merges
+        # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#running-your-workflow-when-a-pull-request-merges-1
+        if: github.event.pull_request.merged == true
         name: Build
         runs-on: ubuntu-latest
-        steps:
-            
+        steps:           
             - uses: actions/checkout@v2
               with:
                   fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
@@ -47,11 +52,11 @@ jobs:
                   restore-keys: ${{ runner.os }}-m2
 
     test:
+        if: github.event.pull_request.merged == true
         name: Test
         needs: build
         runs-on: ubuntu-latest
         steps:
-
             - uses: actions/checkout@v2
               with:
                   fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
@@ -80,7 +85,6 @@ jobs:
             #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             #  run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=devops-test-repo
 
-
             - name: Sonar Cloud Analysis
               if: success() # always() failure() success()
               run: >
@@ -96,11 +100,10 @@ jobs:
                   SONAR_URL: ${{ secrets.SONAR_URL }}
                   SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
 
-
             - name: ServiceNow DevOps Sonar Scan Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
-              uses: ServiceNow/servicenow-devops-sonar@v1.34.2
+              uses: ServiceNow/servicenow-devops-sonar@main
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -125,7 +128,7 @@ jobs:
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-test-report@6c7ef85f6aedfb7ab17e4d17c52c14c5f2f455fd
-              uses: ServiceNow/servicenow-devops-test-report@v1.34.2
+              uses: ServiceNow/servicenow-devops-test-report@main
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -145,19 +148,16 @@ jobs:
                   # GitHub Custom Action
                   test-type: # optional, default is JUnit
 
-
-
-
     integrationTest:
+        if: github.event.pull_request.merged == true
         name: Integration Tests
         needs: test
         runs-on: ubuntu-latest
-        steps:  
-
+        steps:
             - name: ServiceNow DevOps Register Artifact
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-register-artifact@6312802fd9eecd4a57b13216e968b8cae4ff6fe4
-              uses: ServiceNow/servicenow-devops-register-artifact@v1.34.2
+              uses: ServiceNow/servicenow-devops-register-artifact@main
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -193,11 +193,10 @@ jobs:
                       }
                   ]'
 
-
             - name: ServiceNow DevOps Register Package
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-register-package@96a351e6f06e592011b9bdd7da5b2af26506d86b
-              uses: ServiceNow/servicenow-devops-register-package@v1.34.2
+              uses: ServiceNow/servicenow-devops-register-package@main
               with:
                   # ServiceNow Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -236,11 +235,11 @@ jobs:
                   job-name: 'Integration Tests'
 
     deploy:
+        if: github.event.pull_request.merged == true
         name: Deploy
         needs: integrationTest
         runs-on: ubuntu-latest
         steps:     
-
             - name: ServiceNow DevOps Change Automation
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-change@0f57435999463cc1dea44bde4f5eca9879474b85
