--- a/.github/workflows/custom-tasks-workflow.yaml
+++ b/.github/workflows/custom-tasks-workflow.yaml
@@ -276,3 +276,13 @@ jobs:
 
             - name: Run deployment scripts
               run: echo Completed Deployment
+
+
+    postdeploy:
+        #if: github.event.pull_request.merged == true
+        name: PostDeploy
+        needs: deploy
+        runs-on: ubuntu-latest
+        steps:
+            - name: Run deployment scripts
+              run: echo Completed Deployment
