--- a/.github/workflows/NT-casetask.yml
+++ b/.github/workflows/NT-casetask.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: GitHub Actions Workflow with SNOW custom tasks
+name: GitHub Actions Workflow for Northern Trust case task
 
 # on:
 #   push:
