--- a/.github/workflows/change-status-workflow.yml
+++ b/.github/workflows/change-status-workflow.yml
@@ -103,7 +103,7 @@ jobs:
             - name: ServiceNow DevOps Sonar Scan Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
-              uses: ServiceNow/servicenow-devops-sonar@main
+              uses: ServiceNow/servicenow-devops-sonar@1.34.2
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -128,7 +128,7 @@ jobs:
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-test-report@6c7ef85f6aedfb7ab17e4d17c52c14c5f2f455fd
-              uses: ServiceNow/servicenow-devops-test-report@main
+              uses: ServiceNow/servicenow-devops-test-report@1.34.2
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -157,7 +157,7 @@ jobs:
             - name: ServiceNow DevOps Register Artifact
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-register-artifact@6312802fd9eecd4a57b13216e968b8cae4ff6fe4
-              uses: ServiceNow/servicenow-devops-register-artifact@main
+              uses: ServiceNow/servicenow-devops-register-artifact@1.34.2
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -196,7 +196,7 @@ jobs:
             - name: ServiceNow DevOps Register Package
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-register-package@96a351e6f06e592011b9bdd7da5b2af26506d86b
-              uses: ServiceNow/servicenow-devops-register-package@main
+              uses: ServiceNow/servicenow-devops-register-package@1.34.2
               with:
                   # ServiceNow Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
