--- a/.github/workflows/change-status-workflow.yml
+++ b/.github/workflows/change-status-workflow.yml
@@ -243,7 +243,7 @@ jobs:
             - name: ServiceNow DevOps Change Automation
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-change@0f57435999463cc1dea44bde4f5eca9879474b85
-              uses: ServiceNow/servicenow-devops-change@v1.35.2
+              uses: ServiceNow/servicenow-devops-change@vmain
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
